Closed
Bug 1414421
Opened 8 years ago
Closed 8 years ago
Change MSCOM diagnostic asserts to fire only on Nightly
Categories
(Core :: IPC: MSCOM, defect)
Tracking
()
RESOLVED
FIXED
mozilla59
People
(Reporter: bugzilla, Assigned: bugzilla)
References
Details
(Whiteboard: aes+)
Attachments
(1 file)
|
2.19 KB,
patch
|
Jamie
:
review+
gchang
:
approval-mozilla-beta+
|
Details | Diff | Splinter Review |
Let's prevent these from firing on dev edition.
| Assignee | ||
Updated•8 years ago
|
Assignee: nobody → aklotz
| Assignee | ||
Updated•8 years ago
|
Status: NEW → ASSIGNED
| Assignee | ||
Comment 1•8 years ago
|
||
Attachment #8933083 -
Flags: review?(jteh)
Updated•8 years ago
|
Attachment #8933083 -
Flags: review?(jteh) → review+
| Assignee | ||
Comment 2•8 years ago
|
||
https://hg.mozilla.org/integration/mozilla-inbound/rev/08e8c61d3c5a85a9fae9f993092133dbe904abc2
Bug 1414421: Change some diagnostic asserts in mscom to stop firing on dev edition; r=Jamie
Comment 3•8 years ago
|
||
| bugherder | ||
Status: ASSIGNED → RESOLVED
Closed: 8 years ago
status-firefox59:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla59
| Assignee | ||
Comment 4•8 years ago
|
||
Comment on attachment 8933083 [details] [diff] [review]
Patch
Approval Request Comment
[Feature/Bug causing the regression]: a11y+e10s
[User impact if declined]: Unnecessary crashing on dev edition
[Is this code covered by automated tests?]: Yes
[Has the fix been verified in Nightly?]: No, because this fix does not affect Nightly
[Needs manual test from QE? If yes, steps to reproduce]: No
[List of other uplifts needed for the feature/fix]: None
[Is the change risky?]: No
[Why is the change risky/not risky?]: It makes Dev Edition act the same way as Beta and Release
[String changes made/needed]: None
Attachment #8933083 -
Flags: approval-mozilla-beta?
Comment 5•8 years ago
|
||
Comment on attachment 8933083 [details] [diff] [review]
Patch
Avoid unnecessary crashing on dev edition. Beta58+.
Attachment #8933083 -
Flags: approval-mozilla-beta? → approval-mozilla-beta+
Comment 6•8 years ago
|
||
Please provide a patch for beta. At least bug 1402519 prevents the central patch from applying on beta. Thank you.
Flags: needinfo?(aklotz)
| Assignee | ||
Comment 7•8 years ago
|
||
| uplift | ||
Flags: needinfo?(aklotz)
You need to log in
before you can comment on or make changes to this bug.
Description
•