Bug 1414421: Change some diagnostic asserts in mscom to stop firing on dev edition; r=Jamie a=gchang

MozReview-Commit-ID: JfKevpNIiRT